fix: Pin byte-buddy and byte-buddy-agent to a newer version
Signed-off-by: Ryan Prayogo <57620+ryanprayogo@users.noreply.github.com>